[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["zalimpshigotizhev <zalimpshigotizhev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
psycopg2 = "^2.9.9"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
